# soon-guard

./: Cargo.toml  README.md  deploy-verified.sh  deploy.sh  deployment.sh  monitor-balance.sh
front-end/: install-solana.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.config.json
front-end/src/app/: globals.css  layout.tsx  page.tsx
front-end/src/components/analytics/: ActivityHeatmap.tsx  ContractMetrics.tsx  NetworkHealth.tsx
front-end/src/components/layout/: Footer.tsx  Navbar.tsx
front-end/src/components/monitoring/: GasTracker.tsx  TxSimulator.tsx
front-end/src/components/providers/: WalletProvider.tsx
front-end/src/components/security/: RiskScanner.tsx  VulnerabilityList.tsx
front-end/src/hooks/: useAnalytics.ts  useProgram.ts
front-end/src/lib/: constants.ts
front-end/src/utils/: constants.ts  program.ts
src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
