[package]
name = "soon-guard"
version = "0.1.0"
edition = "2021"
description = "Security and analytics tool for SOON network"

[features]
no-entrypoint = []
devnet = []

[dependencies]
solana-program = "=1.17.0"
borsh = "0.10.3"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"
