[package]
name = "soon-guard"
version = "0.1.0"
edition = "2021"
description = "Security and analytics tool for SOON network"

[features]
no-entrypoint = []
devnet = []
testnet = []
[dependencies]
solana-program = "2.1.1"
borsh = "1.5.3"
thiserror = "2.0.3"
num-derive = "0.4"
num-traits = "0.2"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "2.1.1"
solana-sdk = "2.1.1"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"
